update many functions documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(get_events)
 export(get_events_prices)
 export(get_issuing_prices)
 export(get_issuing_volume_by_date)
-export(get_registered_bakers)
+export(get_registered_bankers)
 export(get_registered_coordinators)
 export(get_registered_trustees)
 export(get_storage_by_cetip_code)
